# poetry_fallback_explicit

./: README.md  autotest_config.json  pyproject.toml
